--- a/project/main/templates/main/base.html
+++ b/project/main/templates/main/base.html
@@ -3,7 +3,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-  <title>{% block title %}{% endblock %}</title>
+<title
+  {% block title %}
+  {% endblock %}
+</title>
 </head>
 <body>
   {% block content %}
