--- a/project/main/templates/main/index.html
+++ b/project/main/templates/main/index.html
@@ -1,8 +1,10 @@
 {% extends 'main/base.html' %}
 
-{% block title %}SIG{% endblock %}
+{% block title %}
+SIG
+{% endblock %}
 {% block content %}
-<div>
-  <h1>Let's Start!</h1>
-</div>
+<h1>
+  Let's Start!
+</h1>
 {% endblock %}
