--- a/project/main/templates/main/base.html
+++ b/project/main/templates/main/base.html
@@ -1,15 +1,15 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<title
-  {% block title %}
-  {% endblock %}
-</title>
-</head>
-<body>
-  {% block content %}
-  {% endblock %}
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>
+      {% block title %}
+      {% endblock %}
+    </title>
+  </head>
+  <body>
+    {% block content %}
+    {% endblock %}
+  </body>
 </html>
